# lowess-project

./: .clang-tidy  .gitattributes  .gitignore  .lintr  .readthedocs.yaml  BENCHMARKS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Cargo.toml  INSTALLATION.md  Makefile  README.md  check_msrv.py  mkdocs.yml  verify_out.txt
benchmarks/fastLowess/: Cargo.toml
benchmarks/fastLowess/src/: bench.rs  lib.rs
bindings/cpp/: .clang-tidy  CMAKE.md  CMakeLists.txt  Cargo.toml  LICENSE-APACHE  README.md  build.rs  cbindgen.toml
bindings/cpp/cmake/: fastlowessConfig.cmake.in
bindings/cpp/examples/: batch_smoothing.cpp  online_smoothing.cpp  streaming_smoothing.cpp
bindings/cpp/include/: fastlowess.h  fastlowess.hpp
bindings/cpp/src/: lib.rs
bindings/julia/: Cargo.toml  README.md
bindings/julia/examples/: basic_usage.jl  streaming_smoothing.jl
bindings/julia/julia/: Project.toml  README.md
bindings/julia/julia/src/: FastLOWESS.jl  fastLowess.jl  fastlowess.jl
bindings/julia/src/: lib.rs
bindings/nodejs/: Cargo.toml  README.md  eslint.config.js  index.d.ts  index.js  package-lock.json  package.json
bindings/nodejs/examples/: basic.js  batch_smoothing.js  online_smoothing.js  streaming_smoothing.js
bindings/nodejs/npm/darwin-arm64/: package.json
bindings/nodejs/npm/darwin-x64/: package.json
bindings/nodejs/npm/linux-arm64-gnu/: package.json
bindings/nodejs/npm/linux-x64-gnu/: package.json
bindings/nodejs/npm/linux-x64-musl/: package.json
bindings/nodejs/npm/win32-arm64-msvc/: package.json
bindings/nodejs/npm/win32-x64-msvc/: package.json
bindings/nodejs/src/: lib.rs
bindings/python/: .gitignore  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  pyproject.toml
bindings/python/.github/workflows/: ci.yml  conda-forge-update.yml  release.yml
bindings/python/docs/source/: conf.py  examples.rst  execution_modes.rst  index.rst  parameters.rst
bindings/python/examples/: batch_smoothing.py  online_smoothing.py  streaming_smoothing.py
bindings/python/fastlowess/: __init__.py  py.typed
bindings/python/python/fastlowess/: __init__.py  __version__.py  _core.pyi
bindings/python/src/: lib.rs
bindings/r/src/: Cargo.toml  Cargo.toml.test  Makevars  Makevars.in  Makevars.win  SOURCE_MANIFEST.toml  cargo-config.toml  dummy.c  entrypoint.c  lib.rs  vendor.tar.xz
bindings/wasm/: Cargo.toml  README.md  eslint.config.js  package-lock.json  package.json
bindings/wasm/examples/: batch_smoothing.html  batch_smoothing.js  index.html  online_smoothing.js  streaming_smoothing.html  streaming_smoothing.js
bindings/wasm/src/: lib.rs
bindings/wasm/tests/: wasm_tests.rs
crates/fastLowess/: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md
crates/fastLowess/.github/workflows/: ci.yml
crates/fastLowess/examples/: batch_smoothing.rs  fast_batch_smoothing.rs  fast_online_smoothing.rs  online_smoothing.rs  streaming_smoothing.rs
crates/fastLowess/src/: api.rs  binding_support.rs  input.rs  lib.rs  parse.rs
crates/fastLowess/src/adapters/: batch.rs  mod.rs  online.rs  streaming.rs
crates/fastLowess/src/engine/: executor.rs  gpu.rs  mod.rs
crates/fastLowess/src/evaluation/: cv.rs  intervals.rs  mod.rs
crates/fastLowess/tests/: gpu_tests.rs  integration_tests.rs  parallel_interval_tests.rs  smooth_pass_consistency.rs
crates/lowess/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  Makefile  README.md
crates/lowess/.github/workflows/: ci.yml
crates/lowess/examples/: batch_smoothing.rs  online_smoothing.rs  streaming_smoothing.rs
crates/lowess/src/: alias.rs  api.rs  defaults.rs  lib.rs  parse.rs
crates/lowess/src/adapters/: batch.rs  defaults.rs  mod.rs  online.rs  streaming.rs
crates/lowess/src/algorithms/: defaults.rs  interpolation.rs  mod.rs  regression.rs  robustness.rs
crates/lowess/src/engine/: executor.rs  mod.rs  output.rs  validator.rs
crates/lowess/src/evaluation/: cv.rs  diagnostics.rs  intervals.rs  mod.rs
crates/lowess/tests/: adapters_online_tests.rs  algorithms_regression_tests.rs  algorithms_robustness_tests.rs  api_tests.rs  engine_output_tests.rs  evaluation_diagnostics_tests.rs  evaluation_intervals_tests.rs  math_kernel_tests.rs  primitives_window_tests.rs
dev/: style_pkg.R  (+17 more)
examples/: Cargo.toml
examples/cpp/: batch_smoothing.cpp  online_smoothing.cpp  streaming_smoothing.cpp
examples/fastLowess/: fast_batch_smoothing.rs  fast_online_smoothing.rs  fast_streaming_smoothing.rs
examples/julia/: batch_smoothing.jl  online_smoothing.jl  streaming_smoothing.jl
examples/lowess/: batch_smoothing.rs  online_smoothing.rs  streaming_smoothing.rs
examples/nodejs/: batch_smoothing.js  online_smoothing.js  streaming_smoothing.js
examples/python/: batch_smoothing.py  online_smoothing.py  streaming_smoothing.py
examples/r/: batch_smoothing.R  online_smoothing.R  streaming_smoothing.R
examples/wasm/: batch_smoothing.html  online_smoothing.html  streaming_smoothing.html
tests/: Cargo.toml
tests/cpp/: CMakeLists.txt  test_fastlowess.cpp
tests/fastLowess/: gpu_sorting_tests.rs  gpu_tests.rs  integration_tests.rs  mod.rs  parallel_eval_tests.rs  parallel_interval_tests.rs  smooth_pass_consistency.rs
tests/julia/: test_FastLOWESS.jl  test_fastlowess.jl
tests/lowess/: adapters_batch_tests.rs  adapters_online_tests.rs  adapters_streaming_tests.rs  algorithms_interpolation_tests.rs  algorithms_regression_tests.rs  api_tests.rs  engine_executor_tests.rs  engine_validator_tests.rs  evaluation_cv_tests.rs  math_boundary_tests.rs  math_scaling_tests.rs  mod.rs  prelude_test.rs  primitives_sorting_tests.rs
tests/nodejs/: test_fastlowess.js
tests/python/: test_fastlowess.py  test_gil.py  test_stateful.py
tests/r/: testthat.R
tests/r/testthat/: test-errors.R  test-extendr-wrappers.R  test-fastlowess.R  test-fastlowess_online.R  test-fastlowess_streaming.R  test-methods.R  test-nullable.R  test-utils.R
tests/src/: lib.rs
tests/wasm/: test_fastlowess_wasm.js
validation/fastLowess/: Cargo.toml
validation/fastLowess/src/: validate.rs  visual.rs
(+210 files in other folders)
