[workspace]
resolver = "2"
members = [
    "crates/lowess",
    "crates/fastLowess",
    "bindings/python",
    "bindings/julia",
    "bindings/nodejs",
    "bindings/wasm",
    "bindings/cpp",
    "examples",
    "tests",
    "validation/fastLowess",
    "benchmarks/fastLowess",
]
exclude = ["bindings/r/src/vendor"]

[workspace.package]
authors = ["Amir Valizadeh <thisisamirv@gmail.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/thisisamirv/lowess-project"
homepage = "https://github.com/thisisamirv/lowess-project"
documentation = "https://lowess.readthedocs.io/"
rust-version = "1.88"
readme = "README.md"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
