[workspace]
resolver = "3"
members = [
    "crates/lowess",
    "crates/fastLowess",
    "bindings/python",
    "bindings/julia",
    "bindings/nodejs",
    "bindings/wasm",
    "bindings/cpp",
    "examples",
    "tests",
    "validation/fastLowess",
]
exclude = ["bindings/r/src/vendor"]

[workspace.package]
authors = ["Amir Valizadeh <thisisamirv@gmail.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/thisisamirv/lowess-project"
homepage = "https://github.com/thisisamirv/lowess-project"
documentation = "https://lowess.readthedocs.io/"
rust-version = "1.89"
readme = "README.md"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

# C/C++ binding release profile: panic=abort ensures no GCC unwind symbols
# (_Unwind_Resume, _Unwind_RaiseException, etc.) are embedded in the static
# archive or DLL, making the artifact linkable by MSVC, Clang, and GCC alike.
[profile.release-c]
inherits = "release"
panic = "abort"

# Override registry versions with local workspace crates during development.
# Bindings declare versioned dependencies (e.g. fastLowess = { version = "1.3" })
# so that published packages resolve correctly; the patch below ensures the local
# workspace code is used when building within this repo.
[patch.crates-io]
lowess = { path = "crates/lowess" }
fastLowess = { path = "crates/fastLowess" }
