[package]
name = "examples"
version = "0.99.9"
authors = ["Amir Valizadeh <thisisamirv@gmail.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/thisisamirv/lowess-project"
homepage = "https://github.com/thisisamirv/lowess-project"
rust-version = "1.88"
readme = "README.md"
description = "High-performance LOWESS (Locally Weighted Scatterplot Smoothing)"
keywords = ["lowess", "smoothing", "statistics", "regression", "bioinformatics"]
categories = ["science", "algorithms"]

[dependencies]
lowess = { path = "../crates/lowess", default-features = false }
fastLowess = { path = "../crates/fastLowess", default-features = false }
ndarray = "0.17.1"

[features]
default = ["std", "cpu", "dev"]
std = ["lowess/std"]
cpu = ["fastLowess/cpu"]
gpu = ["fastLowess/gpu"]
dev = ["lowess/dev", "fastLowess/dev"]

# lowess examples
[[example]]
name = "batch_smoothing"
path = "lowess/batch_smoothing.rs"

[[example]]
name = "online_smoothing"
path = "lowess/online_smoothing.rs"

[[example]]
name = "streaming_smoothing"
path = "lowess/streaming_smoothing.rs"

# fastLowess examples
[[example]]
name = "fast_batch_smoothing"
path = "fastLowess/fast_batch_smoothing.rs"

[[example]]
name = "fast_online_smoothing"
path = "fastLowess/fast_online_smoothing.rs"

[[example]]
name = "fast_streaming_smoothing"
path = "fastLowess/fast_streaming_smoothing.rs"
