[package]
name = "benchmark"
version = "0.0.0"
edition = "2024"
rust-version = "1.88"
publish = false

[[bench]]
name = "bench"
path = "src/bench.rs"
harness = false

[dependencies]
fastLowess = { path = "../../crates/fastLowess", features = ["cpu", "gpu"] }
lowess = { path = "../../crates/lowess" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = { version = "0.9", features = ["std_rng"] }
rand_distr = "0.5"

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
