[package]
name = "fastlowess-cpp"
version = "0.99.10"
authors = ["Amir Valizadeh <thisisamirv@gmail.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/thisisamirv/lowess-project"
homepage = "https://github.com/thisisamirv/lowess-project"
documentation = "https://lowess.readthedocs.io/"
rust-version = "1.88"
readme = "README.md"
description = "High-performance LOWESS (Locally Weighted Scatterplot Smoothing)"
keywords = ["lowess", "smoothing", "statistics", "regression", "bioinformatics"]
categories = ["science", "algorithms"]

[lib]
name = "fastlowess_cpp"
crate-type = ["cdylib", "staticlib"]

[dependencies]
fastLowess = { version = "0.99.9", features = ["cpu", "dev"] }
libc = "0.2.180"

[build-dependencies]
cbindgen = "0.29.2"
