[package]
name = "fastlowess-cpp"
version = "1.0.0"
authors = ["Amir Valizadeh <thisisamirv@gmail.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/thisisamirv/lowess-project"
homepage = "https://github.com/thisisamirv/lowess-project"
documentation = "https://lowess.readthedocs.io/"
rust-version = "1.88"
readme = "README.md"
description = "High-performance LOWESS (Locally Weighted Scatterplot Smoothing)"
keywords = ["lowess", "smoothing", "statistics", "regression", "bioinformatics"]
categories = ["science", "algorithms"]

[lib]
name = "fastlowess_cpp"
crate-type = ["cdylib", "staticlib"]

[dependencies]
fastLowess = { version = "1.1", features = ["cpu", "dev"] }
libc = "0.2"

[build-dependencies]
cbindgen = "0.29"
