[package]
name = "fastlowess-node"
version = "0.99.7"
edition = "2024"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
fastLowess = { path = "../../crates/fastLowess", features = ["dev", "cpu"] }
napi = { workspace = true, features = ["napi4"] }
napi-derive = { workspace = true }

[build-dependencies]
napi-build = { workspace = true }
