[package]
name = "fastlowess-node"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[lib]
crate-type = ["cdylib"]

[dependencies]
fastLowess = { path = "../../crates/fastLowess", features = ["dev", "cpu"] }
napi = { workspace = true, features = ["napi4"] }
napi-derive = { workspace = true }

[build-dependencies]
napi-build = { workspace = true }
