[package]
name = "fastlowess-node"
version = "1.0.0"
authors = ["Amir Valizadeh <thisisamirv@gmail.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/thisisamirv/lowess-project"
homepage = "https://github.com/thisisamirv/lowess-project"
documentation = "https://lowess.readthedocs.io/"
rust-version = "1.88"
readme = "README.md"
description = "High-performance LOWESS (Locally Weighted Scatterplot Smoothing)"
keywords = ["lowess", "smoothing", "statistics", "regression", "bioinformatics"]
categories = ["science", "algorithms"]

[lib]
crate-type = ["cdylib"]

[dependencies]
fastLowess = { version = "1.1", features = ["dev", "cpu"] }
napi = { version = "3.8", features = ["napi4"] }
napi-derive = "3.5"

[build-dependencies]
napi-build = "2.3"
