[package]
name = "fastLowess-py"
version = "0.99.9"
authors = ["Amir Valizadeh <thisisamirv@gmail.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/thisisamirv/lowess-project"
homepage = "https://github.com/thisisamirv/lowess-project"
rust-version = "1.88"
readme = "README.md"
description = "High-performance LOWESS (Locally Weighted Scatterplot Smoothing)"
keywords = ["lowess", "smoothing", "statistics", "regression", "bioinformatics"]
categories = ["science", "algorithms"]

[dependencies]
fastLowess = { version = "0.99.9", features = ["dev", "cpu"] }
pyo3 = { version = "0.27.2", features = ["abi3-py38"] }
numpy = "0.27.1"

[lib]
name = "fastlowess"
crate-type = ["cdylib"]

[features]
default = []
dev = []
