[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "fastlowess"
dynamic = ["version"]
description = "High-performance LOWESS smoothing for Rust, Python, and R."
authors = [{ name = "Amir Valizadeh", email = "thisisamirv@gmail.com" }]
license = { text = "MIT OR Apache-2.0" }
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Operating System :: OS Independent",
]
keywords = ["lowess", "smoothing", "statistics", "regression", "numpy"]
dependencies = ["numpy>=1.20.0"]

[project.urls]
Documentation = "https://lowess.readthedocs.io/"
Repository = "https://github.com/thisisamirv/lowess-project"
Changelog = "https://github.com/thisisamirv/lowess-project/CHANGELOG.md"

[tool.maturin]
python-source = "python"
module-name = "fastlowess._core"
exclude = ["docs/**", "examples/**", "tests/**", "target/**", ".github/**"]
