[package]
name = "fastlowess-wasm"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
fastLowess = { path = "../../crates/fastLowess", features = ["dev", "cpu"] }
wasm-bindgen = { workspace = true }
js-sys = { workspace = true }

[dev-dependencies]
wasm-bindgen-test = { workspace = true }
