[package]
name = "fastlowess-wasm"
version = "0.99.9"
authors = ["Amir Valizadeh <thisisamirv@gmail.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/thisisamirv/lowess-project"
homepage = "https://github.com/thisisamirv/lowess-project"
documentation = "https://lowess.readthedocs.io/"
rust-version = "1.88"
readme = "README.md"
description = "High-performance LOWESS (Locally Weighted Scatterplot Smoothing)"
keywords = ["lowess", "smoothing", "statistics", "regression", "bioinformatics"]
categories = ["science", "algorithms"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
fastLowess = { version = "0.99.9", features = ["dev", "cpu"] }
wasm-bindgen = "0.2.106"
js-sys = "0.3.83"

[dev-dependencies]
wasm-bindgen-test = "0.3.56"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
