[package]
name = "fastLowess"
version = "0.99.9"
authors = ["Amir Valizadeh <thisisamirv@gmail.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/thisisamirv/lowess-project"
homepage = "https://github.com/thisisamirv/lowess-project"
rust-version = "1.88"
readme = "README.md"
description = "High-performance LOWESS (Locally Weighted Scatterplot Smoothing)"
keywords = ["lowess", "smoothing", "statistics", "regression", "bioinformatics"]
categories = ["science", "algorithms"]
documentation = "https://lowess.readthedocs.io/"

# Build
include = [
    "src/**/*",
    "Cargo.toml",
    "README.md",
    "LICENSE-MIT",
    "LICENSE-APACHE",
]

[dependencies]
lowess = { version = "0.99.9", features = ["dev"] }
num-traits = { version = "0.2.19", features = ["libm"] }
ndarray = { version = "0.17.2", optional = true }
rayon = { version = "1.11.0", optional = true }
wgpu = { version = "26.0.1", optional = true }
bytemuck = { version = "1.24.0", optional = true }
pollster = { version = "0.4.0", optional = true }
futures-intrusive = { version = "0.5.0", optional = true }

[dev-dependencies]
approx = "0.5.1"

[features]
default = ["cpu"]
cpu = ["dep:rayon", "dep:ndarray"]
gpu = ["dep:wgpu", "dep:bytemuck", "dep:pollster", "dep:futures-intrusive"]
dev = []

# Document all features
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
