[package]
# Metadata
name = "fastLowess"
version = "1.1.0"
authors = ["Amir Valizadeh <thisisamirv@gmail.com>"]
edition = "2024"
rust-version = "1.88"
license = "MIT OR Apache-2.0"

# Documentation and Discovery
description = "High-performance LOWESS (Locally Weighted Scatterplot Smoothing)"
readme = "README.md"
repository = "https://github.com/thisisamirv/lowess-project"
homepage = "https://github.com/thisisamirv/lowess-project"
documentation = "https://lowess.readthedocs.io/"
keywords = ["lowess", "smoothing", "statistics", "regression", "bioinformatics"]
categories = ["science", "algorithms"]

# Build
include = [
    "src/**/*",
    "Cargo.toml",
    "README.md",
    "LICENSE-MIT",
    "LICENSE-APACHE",
]

[dependencies]
lowess = { path = "../lowess", version = "1.1.0", features = ["dev"] }
num-traits = { version = "0.2.19", features = ["libm"] }
ndarray = { version = "0.17.2", optional = true }
rayon = { version = "1.11.0", optional = true }
wgpu = { version = "26.0.1", optional = true }
bytemuck = { version = "1.24.0", optional = true }
pollster = { version = "0.4.0", optional = true }
futures-intrusive = { version = "0.5.0", optional = true }

[features]
default = ["cpu"]
cpu = ["dep:rayon", "dep:ndarray"]
gpu = ["dep:wgpu", "dep:bytemuck", "dep:pollster", "dep:futures-intrusive"]
dev = []

# Document all features
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
