[package]
name = "lowess"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }

# Metadata
description = { workspace = true }
readme = "README.md"

# Links
repository = { workspace = true }
documentation = "https://lowess.readthedocs.io/"
homepage = { workspace = true }

# Categories
keywords = { workspace = true }
categories = { workspace = true }

# Build
include = [
    "src/**/*",
    "Cargo.toml",
    "README.md",
    "LICENSE-MIT",
    "LICENSE-APACHE",
]

[dependencies]
num-traits = { workspace = true, features = ["libm"] }
wide = { workspace = true }

[dev-dependencies]
approx = { workspace = true }

[features]
default = ["std"]
std = ["num-traits/std", "wide/std"]
dev = []

# Document all features
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
