[package]
# Metadata
name = "lowess"
version = "1.1.1"
authors = ["Amir Valizadeh <thisisamirv@gmail.com>"]
edition = "2024"
rust-version = "1.88"
license = "MIT OR Apache-2.0"

# Documentation and Discovery
description = "LOWESS (Locally Weighted Scatterplot Smoothing)"
readme = "README.md"
repository = "https://github.com/thisisamirv/lowess-project"
homepage = "https://github.com/thisisamirv/lowess-project"
documentation = "https://lowess.readthedocs.io/"
keywords = ["lowess", "smoothing", "statistics", "regression", "bioinformatics"]
categories = ["science", "algorithms"]

# Build
include = [
    "src/**/*",
    "Cargo.toml",
    "README.md",
    "LICENSE-MIT",
    "LICENSE-APACHE",
]

[dependencies]
num-traits = { version = "0.2", features = ["libm"] }
wide = { version = "0.7", default-features = false }

[features]
default = ["std"]
std = ["num-traits/std", "wide/std"]
dev = []

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
