[package]
name = "rfastlowess"
version = "0.99.7"
authors = ["Amir Valizadeh <thisisamirv@gmail.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.85.0"
publish = false

# Build
[dependencies]
fastLowess = { path = "vendor/fastLowess", features = ["dev", "cpu"] }
extendr-api = "0.8.1"

[lib]
name = "rfastlowess"
path = "lib.rs"
crate-type = ["staticlib", "rlib"]

[features]
default = []
dev = []

[workspace]

[patch.crates-io]
lowess = { path = "vendor/lowess" }
