[package]
name = "rfastlowess"
version = "1.0.0"
authors = ["Amir Valizadeh <thisisamirv@gmail.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/thisisamirv/lowess-project"
homepage = "https://github.com/thisisamirv/lowess-project"
documentation = "https://lowess.readthedocs.io/"
rust-version = "1.88"
readme = "README.md"
description = "High-performance LOWESS (Locally Weighted Scatterplot Smoothing)"
keywords = ["lowess", "smoothing", "statistics", "regression", "bioinformatics"]
categories = ["science", "algorithms"]

# Build
[dependencies]
fastLowess = { path = "vendor/fastLowess", features = ["dev", "cpu"] }
extendr-api = "0.8"

[lib]
name = "rfastlowess"
path = "lib.rs"
crate-type = ["staticlib", "rlib"]

[features]
default = []
dev = []

[workspace]

[patch.crates-io]
lowess = { path = "vendor/lowess" }
